--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,6 @@ services:
       - traefik.http.routers.dashboard.rule=Host(`localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
       - traefik.http.routers.dashboard.service=api@internal
       - traefik.http.routers.dashboard.middlewares=auth
-      - traefik.http.middlewares.auth.basicauth.users=axio:$$2y$$05$$34oOzN//BJb61/zLBzGpw.umv3SePmnXAsOcrUKIujYIm.skUmNs2
+      - traefik.http.middlewares.auth.basicauth.users='user:pw'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
