--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   traefik:
     image: traefik
+    restart: always
     container_name: traefik
     command:
       - --log.level=DEBUG
@@ -11,14 +12,30 @@ services:
       - --api.dashboard=true
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
+      - --certificatesresolvers.sslresolver.acme.email=email@address.com
+      - --certificatesresolvers.sslresolver.acme.storage=acme.json
+      - --certificatesresolvers.sslresolver.acme.httpchallenge.entrypoint=web
+      - --entrypoints.web.http.redirections.entryPoint.to=websecure
+      - --entrypoints.web.http.redirections.entryPoint.scheme=https
+      - --api.dashboard=true
     ports:
       - 80:80
       - 443:443
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.dashboard.rule=Host(`localhost`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
-      - traefik.http.routers.dashboard.service=api@internal
-      - traefik.http.routers.dashboard.middlewares=auth
-      - traefik.http.middlewares.auth.basicauth.users=axio:$$2y$$05$$34oOzN//BJb61/zLBzGpw.umv3SePmnXAsOcrUKIujYIm.skUmNs2
     volumes:
+      - traefik-certificates:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`url.for.dashboard`)"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      - "traefik.http.routers.traefik.tls.certresolver=sslresolver"
+      - "traefik.http.routers.traefik.service=api@internal"
+      - "traefik.http.routers.traefik.middlewares=traefik-auth"
+      - "traefik.http.middlewares.traefik-auth.basicauth.users=user:pass"
+
+volumes:
+  traefik-certificates:
+networks:
+  default:
+    external:
+      name: hostnet
